[Upd] workflow for docker commmons secrets update.

--- a/.github/workflows/docker-commons.yml
+++ b/.github/workflows/docker-commons.yml
@@ -1,10 +1,13 @@
 name: Common Docker config
+
 on:
   workflow_call:
     outputs:
       dockerUser: { description: 'Docker Hub username', type: string }
       dockerPassword: { description: 'Docker Hub password', type: string }
     secrets:
+      personal_access_token:
+        required: false
       DOCKERHUB_USER:
         required: true
       DOCKERHUB_PASSWORD:
