--- a/.github/workflows/docker-commons.yml
+++ b/.github/workflows/docker-commons.yml
@@ -14,10 +14,14 @@ jobs:
     outputs:
       dockerUser: ${{ steps.get.outputs.dockerUser }}
       dockerPassword: ${{ steps.get.outputs.dockerPassword }}
+    env:
+      DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}
+    if: ${{ env.DOCKERHUB_USER != '' }}
+    run: echo "envs is set"
     steps:
       - id: get
         run: |
-          echo "Direct secret DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }}"
+          echo "Direct secret DOCKERHUB_USER: ${{ secrets.DOCKERHUB_USER }} | sed 's/./& /g "
           echo "Env DOCKERHUB_USER: $DOCKERHUB_USER"
           echo "dockerUser=${{ secrets.DOCKERHUB_USER }}" >> $GITHUB_OUTPUT
           echo "dockerPassword=${{ secrets.DOCKERHUB_PASSWORD }}" >> $GITHUB_OUTPUT
