--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,31 +1,29 @@
-#name: Deploy trigger
-#
-#on:
-#  repository_dispatch:
-#    types: [ user-service-builded, recommendation-service-builded ]
-#
-#jobs:
-#  deploy:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: Checkout Aggregation Repository
-#        uses: actions/checkout@v2
-#
-#      - name: Set Up SSH
-#        run: |
-#          mkdir -p ~/.ssh
-#          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
-#          chmod 600 ~/.ssh/id_rsa
-#          ssh-keyscan -p ${{ secrets.MANKI_SERVER_PORT }} ${{ secrets.MANKI_SERVER }} >> ~/.ssh/known_hosts
-#
-#      - name: SSH and Deploy
-#        run: |
-#          ssh -o StrictHostKeyChecking=no -J ${{ secrets.MANKI_SERVER_USER }}@${{ secrets.MANKI_SERVER }}:${{ secrets.MANKI_SERVER_PORT }} -p ${{ secrets.MANKI_HOME_SERVER_PORT }} ${{ secrets.MANKI_HOME_SERVER_USER }}@${{ secrets.MANKI_HOME_SERVER }} << 'EOF'
-#            cd ~/Documents/movie-mate-system
-#            git reset --hard
-#            git checkout test
-#            git pull
-#            chmod +x ./overlay/deploy.sh
-#            bash ./overlay/deploy.sh
-#          EOF
-      
+name: Deploy Trigger
+
+on:
+  repository_dispatch:
+    types: [ user-service-builded, recommendation-service-builded ]
+
+jobs:
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Aggregation Repository
+        uses: actions/checkout@v2
+
+      - name: Set Up SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_rsa
+          ssh-keyscan -p ${{ secrets.SERVER_PORT }} ${{ secrets.SERVER_HOST }} >> ~/.ssh/known_hosts
+
+      - name: Deploy Service via SSH
+        run: |
+          SERVICE="${{ github.event.client_payload.service }}"
+          IMAGE_TAG="${{ github.event.client_payload.tag }}"
+          echo "Deploying service: $SERVICE with tag: $IMAGE_TAG"
+          ssh -o StrictHostKeyChecking=no ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} << 'EOF'
+          # Call a generic deploy script that handles multiple services
+          /path/to/deploy.sh "$SERVICE" "$IMAGE_TAG"
+          EOF
