[Fix] removed auth for development in zookeeper

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,10 +66,8 @@ services:
     image: bitnami/zookeeper:latest
     container_name: mm-zookeeper
     environment:
-      ZOOKEEPER_CLIENT_PORT: "${MOVIE_MATE_ZOOKEEPER_CLIENT_PORT}"
-      ZOOKEEPER_ENABLE_AUTH: yes
-      ZOOKEEPER_SERVER_USERS: "${MOVIE_MATE_ZOOKEEPER_USER}"
-      ZOOKEEPER_SERVER_PASSWORDS: "${MOVIE_MATE_ZOOKEEPER_PASSWORD}"
+      ZOO_PORT_NUMBER: "${MOVIE_MATE_ZOOKEEPER_CLIENT_PORT}"
+      ALLOW_ANONYMOUS_LOGIN: "yes"
     ports:
       - "${MOVIE_MATE_ZOOKEEPER_CLIENT_PORT}:${MOVIE_MATE_ZOOKEEPER_CLIENT_PORT}"
     networks:
