[Fix] fixed env for testing server

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,7 +148,7 @@ services:
 #    depends_on:
 #      - api-gateway
     environment:
-      SERVER_PORT: "${MOVIE_MATE_RECOMMENDATION_SERVICE_PORT}"
+      MOVIE_MATE_RECOMMENDATION_SERVICE_PORT: "${MOVIE_MATE_RECOMMENDATION_SERVICE_PORT}"
     ports:
       - "${MOVIE_MATE_RECOMMENDATION_SERVICE_PORT}:${MOVIE_MATE_RECOMMENDATION_SERVICE_PORT}"
     networks:
