--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,11 +27,10 @@ jobs:
           PROJECT_PATH="${{ vars.PROJECT_PATH }}"
           
           echo "Deploying service: $SERVICE with tag: $IMAGE_TAG"
-          ssh -o StrictHostKeyChecking=no -J ${{ secrets.MANKI_SERVER_USER }}@${{ secrets.MANKI_SERVER }}:${{ secrets.MANKI_SERVER_PORT }} -p ${{ secrets.MANKI_HOME_SERVER_PORT }} ${{ secrets.MANKI_HOME_SERVER_USER }}@${{ secrets.MANKI_HOME_SERVER }} << EOF 
-            echo "📂 Changing to project directory: $PROJECT_PATH"
-            cd "$PROJECT_PATH"
-            git reset --hard
-            git pull
-            chmod +x ./scripts/re-deploy-service.sh
-            bash ./scripts/re-deploy-service.sh "$DOCKER_REGISTRY" "$SERVICE" "$IMAGE_TAG"
-          EOF
+          ssh -o StrictHostKeyChecking=no -J ${{ secrets.MANKI_SERVER_USER }}@${{ secrets.MANKI_SERVER }}:${{ secrets.MANKI_SERVER_PORT }} -p ${{ secrets.MANKI_HOME_SERVER_PORT }} ${{ secrets.MANKI_HOME_SERVER_USER }}@${{ secrets.MANKI_HOME_SERVER }} \
+          "cd '$PROJECT_PATH' && \
+          if [ ! -d '.git' ]; then echo '❌ Not a valid Git repository!' && exit 1; fi && \
+          git reset --hard && git pull && \
+          if [ ! -f './scripts/re-deploy-service.sh' ]; then echo '❌ Deployment script not found!' && exit 1; fi && \
+          chmod +x ./scripts/re-deploy-service.sh && \
+          bash ./scripts/re-deploy-service.sh '$DOCKER_REGISTRY' '$SERVICE' '$IMAGE_TAG'"
