[Fix] envs for postgre fixed

--- a/.env.db.example
+++ b/.env.db.example
@@ -1,10 +1,12 @@
 # POSTGRES
-MOVIE_MATE_POSTGRES_USER=postgres
-MOVIE_MATE_POSTGRES_PASSWORD=mysecretpassword
-MOVIE_MATE_POSTGRES_DB=movies
-MOVIE_MATE_POSTGRES_PORT=5432
+MOVIE_MATE_POSTGRE_USERNAME=postgres
+MOVIE_MATE_POSTGRE_PASSWORD=mysecretpassword
+MOVIE_MATE_POSTGRE_URL=jdbc://host
+MOVIE_MATE_POSTGRE_DB=movies
+MOVIE_MATE_POSTGRE_PORT=5432
 
 # REDIS
+MOVIE_MATE_REDIS_HOST=host
 MOVIE_MATE_REDIS_PASSWORD=redisPass
 MOVIE_MATE_REDIS_PORT=6379
 
