--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,11 @@ MOVIE_MATE_KAFKA_EXTERNAL_PORT=9092
 
 
 # Microservices
+MOVIE_MATE_DISCOVERY_SERVER_HOST=
 MOVIE_MATE_DISCOVERY_SERVER_PORT=8761
+MOVIE_MATE_DISCOVERY_SERVER_DNS_PORT=8765
+
+
 MOVIE_MATE_API_GATEWAY_PORT=8080
 MOVIE_MATE_MOVIE_SERVICE_PORT=8081
 MOVIE_MATE_ACTIVITY_SERVICE_PORT=8082
