[Add] added envs for ui in consul

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ MOVIE_MATE_KAFKA_EXTERNAL_PORT=9092
 # Microservices
 MOVIE_MATE_DISCOVERY_SERVER_HOST=
 MOVIE_MATE_DISCOVERY_SERVER_PORT=8761
+MOVIE_MATE_DISCOVERY_SERVER_UI_PORT=7777
 MOVIE_MATE_DISCOVERY_SERVER_DNS_PORT=8765
 
 
