[Fix] added command to inject env variables

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,9 @@ MOVIE_MATE_DISCOVERY_SERVER_DNS_PORT=8765
 
 
 MOVIE_MATE_API_GATEWAY_PORT=8080
+MOVIE_MATE_API_GATEWAY_DASHBOARD_USER=manki
+
+
 MOVIE_MATE_MOVIE_SERVICE_PORT=8081
 MOVIE_MATE_ACTIVITY_SERVICE_PORT=8082
 MOVIE_MATE_RECOMMENDATION_SERVICE_PORT=8083
