--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -122,8 +122,10 @@ services:
         - .env.db
         - .env
         - ../mm-api-gateway/.env
+    command:
+      - "--providers.consulcatalog.endpoint.address=${MOVIE_MATE_DISCOVERY_SERVER_HOST}:${MOVIE_MATE_DISCOVERY_SERVER_PORT}"
     ports:
-      - "${MOVIE_MATE_API_GATEWAY_PORT}:80"
+      - "${MOVIE_MATE_API_GATEWAY_PORT}:8080"
     networks:
       - movie-mate-network
 
