--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,12 +18,13 @@ services:
   ##############################################################################
   # Metrics: Prometheus
   mm-prometheus:
-    image: prom/prometheus
+    build:
+      context: ./config/prometheus
     container_name: mm-prometheus
+    env_file:
+      - .env
     ports:
       - "${MOVIE_MATE_PROMETHEUS_PORT}:9090"
-    volumes:
-      - ./config/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
       - movie-mate-network
 
@@ -53,7 +54,7 @@ services:
     networks:
       - movie-mate-network
 
-    # Logging: Loki
+  # Logging: Loki
   mm-loki:
     image: grafana/loki:latest
     container_name: mm-loki
@@ -74,6 +75,18 @@ services:
     environment:
       - LOKI_PUSH_URL=http://mm-loki:${MOVIE_MATE_LOKI_PORT:-3100}/loki/api/v1/push
     command: -config.file=/etc/promtail/promtail-config.yaml -config.expand-env=true
+    networks:
+      - movie-mate-network
+
+  # Metrics: OTEL
+  mm-otel-collector:
+    image: otel/opentelemetry-collector-contrib:latest
+    container_name: mm-otel-collector
+    volumes:
+      - ./config/otel/otel-collector-config.yaml:/etc/otel/config.yaml
+    command: [ "--config=/etc/otel/config.yaml" ]
+    ports:
+      - "${MOVIE_MATE_OTEL_PORT:-4317}:4317"
     networks:
       - movie-mate-network
 
