--- a/config/otel/otel-collector-config.yaml
+++ b/config/otel/otel-collector-config.yaml
@@ -2,11 +2,13 @@ receivers:
   otlp:
     protocols:
       grpc:
+        endpoint: 0.0.0.0:4317 # standard port inside the container
       http:
+        endpoint: 0.0.0.0:4318 # standard port inside the container
 
 exporters:
   zipkin:
-    endpoint: "http://mm-zipkin:9411/api/v2/spans"
+    endpoint: "http://mm-zipkin:9411/api/v2/spans" # standard port of zipkin inside docker network
 
 service:
   pipelines:
