--- a/config/prometheus/prometheus.template.yml
+++ b/config/prometheus/prometheus.template.yml
@@ -8,3 +8,6 @@ scrape_configs:
   - job_name: 'mm-user-service-dapr'
     static_configs:
       - targets: ['mm-user-service:9090'] # standard dapr port for metrics inside the container
+  - job_name: 'otel-metrics'
+    static_configs:
+      - targets: ['mm-otel-collector:9464']
